--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <div class="center-all">
+        <div class="lilo-container">
+            <img class="lilo" src="img/stich-dancing-fixed.gif" alt="">
+
+            <div class="center-text">
+                <h1 class="first-text">FELIZ& </h1>
+                <h1>ANIVERSARIO</h1>
+            </div>
+
+            <img class="lilo" src="img/stich-dancing-flipped.gif" alt="">
+
+        </div>
+    </div>
+
+
     {{{body}}}
 </body>
+
 </html>
