--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,13 @@
     <title>Document</title>
 </head>
 
+
+
+
 <body>
+
+    
+
     <div class="center-all">
         <div class="lilo-container">
             <img class="lilo" src="img/stich-dancing-fixed.gif" alt="">
@@ -23,8 +29,26 @@
         </div>
     </div>
 
+     <div class="header">
+        <a href="/">
+            <button class="button1">Home</button>
+        </a>
+        <a href="/quiz">
+            <button class="button1">Quiz</button>
+
+        </a>
+
+        <a>
+            <button class="button1">Cartinha</button>
+
+        </a>
+    </div>
 
     {{{body}}}
+
+    
+
+   
 </body>
 
 </html>
