--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,8 @@
         </div>
     </div>
 
-     <div class="header">
+     <header class="header">
+
         <a href="/">
             <button class="button1">Home</button>
         </a>
@@ -42,7 +43,7 @@
             <button class="button1">Cartinha</button>
 
         </a>
-    </div>
+    </header>
 
     {{{body}}}
 
