--- a/views/quiz/wrong.handlebars
+++ b/views/quiz/wrong.handlebars
@@ -1,5 +1,9 @@
-<h1>Errou!</h1>
-
-<a href="/quiz">
-    <button class="button2"> Reiniciar :(</button>
-</a>
+<div class="center-all">
+    <h1 class="center-text">ERROU! REINICIE IMEDIATAMENTE</h1>
+    <br>
+    <a href="/quiz">
+        <button class="button2"> Reiniciar :(</button>
+    </a>
+    <br>
+    <img src="img/stich-crying.gif">
+</div>
