--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,11 @@
     src: url('/fonts/BukaBird.ttf')
 }
 
+
+@font-face {
+    font-family: 'playnets';
+    src: url('/fonts/Playnets.ttf')
+}
 body {
     background-color: rgb(204,241,255);
     background-image: url("/img/bg.jpg");
@@ -41,9 +46,10 @@ h3{
 
 
 p {
-    color: white;
+    color: rgb(1, 36, 151);
     font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'playnets';
+    margin-left: 5px;
 }
 
 .lilo-container {
@@ -90,8 +96,8 @@ p {
     background: none;
     border: solid 1px;
     border-color: rgb(0, 29, 79);
-    width: 110px;
-    height: 40px;
+    width: 200px;
+    height: 60px;
     color: rgb(0, 29, 79);
     font-size: 15px;
     font-weight: bold;
@@ -115,6 +121,15 @@ p {
     margin-top: 30px;
     bottom : 0;
 
+}
+
+
+.cueca{
+    font-size: 180px;
+}
+
+a{
+    text-decoration: none;
 }
 @media(max-width:600px) {
     .lilo {
