--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,45 @@
-
-
-
 <div>
-    
 
-    <!--
-    <p>Pagina de teste</p>
 
-    <button class="button1">Botão</button>
-    <button class="button2">Botão</button>
+    <br> 
+    <h2>Inicio</h2>
     <br>
-    -->
 
+    <b><p class="text-center"> 
+        FELIZ ANIVERSÁRIO BIAAA. Eu fiz esse site como uma breve homenagem 
+        a esse dia tão especial. A ideia de fazer esse site veio da vontade de dar algo de presente e pela falta de dinheiro kkkkk. 
+        Espero que goste porque eu fiz com muito carinho :) 
+    </p></b>
+
+
+    <br><br><br><br><br>
     <div class="container">
         <img src="img/FotoBia3.jpg">
         <p>Feliz aniversário Bia que você possa realizar tudo que você sempre mais sonhou :) </p>
     </div>
-    
+
     <div class="container">
         <p>Apesar da distancia eu continuo me importando bastante com você</p>
         <img src="img/FotoBia2.jpg">
     </div>
-  
+
     <div class="container">
         <img src="img/FotoBia1.jpg">
         <p>Apesar da distancia eu continuo me importando bastante com você</p>
     </div>
 
-    
+
+    <h3 class="center-all">A CUECA</h3>
+    <br><br><br>
+    <div class="container">
+
+        <a href="/cueca">
+        <b>
+            <img src="img/cueca.png">
+        </b></a>
+        <br>
+        <p> CLIQUE NA CUECA PARA GANHAR 1000000000 DE REAIS IMEDIATAMENTE!!!</p>
+    </div>
+
 
 </div>
