--- a/views/quiz/correct.handlebars
+++ b/views/quiz/correct.handlebars
@@ -1,5 +1,14 @@
+<br>
+
+<div class="center-all">
+
+
 <h1>Acertou!!</h1>
 
+<br>
 <a href="/quiz">
     <button class="button2">Proxima Pergunta :)</button>
 </a>
+<br>
+<img src="img/stich-love.gif">
+</div>
