--- a/views/quiz/quiz.handlebars
+++ b/views/quiz/quiz.handlebars
@@ -3,12 +3,12 @@
 
     <br> <br>
 
-    <h2>O MELHOR QUIZ DO MUNDO: </h2>
+    <h2 class="center-text">O MELHOR QUIZ DO MUNDO </h2>
     <br><br>
 
 
 
-    <h4 class="center-text">{{question.text}}</h4>
+    <b> <p class="center-text">{{question.text}}</p> </b>
     <br>
 
     <form method="post">
