--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ h3{
 
 
 p {
-    color: rgb(1, 36, 151);
+    color: rgb(0, 29, 79);
     font-size: 20px;
     font-family: 'playnets';
     margin-left: 5px;
@@ -153,6 +153,9 @@ a{
         padding: 9px;
     }
 
+    .img-bigger{
+        width: 320px;
+    }
 
     button {
         width: 120px;
