--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,5 +41,17 @@
         <p> CLIQUE NA CUECA PARA GANHAR 1000000000 DE REAIS IMEDIATAMENTE!!!</p>
     </div>
 
+    <h3 class="center-all">A TARTARUGA</h3>
+    <br>
+     <div class="container">
+
+        <a href="/tartaruga">
+        <b>
+            <img src="img/tartaruga.webp">
+        </b></a>
+        <br>
+        <p> A tartaruga sábia tem a resposta de todas as perguntas do universo, pergunte a ela receberá uma resposta</p>
+    </div>
+
 
 </div>
