--- a/views/tartaruga.handlebars
+++ b/views/tartaruga.handlebars
@@ -19,6 +19,8 @@
     </a>
 
     {{else}}
+    <p class="center-text">Faça a pergunta em voz alta e depois clique no botão para receber sua resposta</p>
+    <br>
     <button class="button2" onclick="location.href='/tartaruga?resposta=true'"> <b>Pergunte a grande Tartaruga
         Sábia </b></button>
     {{/if}}
