--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 
     <br> 
-    <h2>Inicio</h2>
+    <h3 class="center-text">Inicio</h3>
     <br>
 
     <b><p class="text-center"> 
@@ -12,21 +12,8 @@
     </p></b>
 
 
-    <br><br><br><br><br>
-    <div class="container">
-        <img src="img/FotoBia3.jpg">
-        <p>Feliz aniversário Bia que você possa realizar tudo que você sempre mais sonhou :) </p>
-    </div>
-
-    <div class="container">
-        <p>Apesar da distancia eu continuo me importando bastante com você</p>
-        <img src="img/FotoBia2.jpg">
-    </div>
-
-    <div class="container">
-        <img src="img/FotoBia1.jpg">
-        <p>Apesar da distancia eu continuo me importando bastante com você</p>
-    </div>
+    <br><br>
+  
 
 
     <h3 class="center-all">A CUECA</h3>
@@ -38,10 +25,10 @@
             <img src="img/cueca.png">
         </b></a>
         <br>
-        <p> CLIQUE NA CUECA PARA GANHAR 1000000000 DE REAIS IMEDIATAMENTE!!!</p>
+        <p>CLIQUE NA CUECA PARA GANHAR 1000000000 DE REAIS IMEDIATAMENTE!!!</p>
     </div>
 
-    <h3 class="center-all">A TARTARUGA</h3>
+    <h3 class="center-text">A TARTARUGA</h3>
     <br>
      <div class="container">
 
@@ -50,7 +37,7 @@
             <img src="img/tartaruga.webp">
         </b></a>
         <br>
-        <p> A tartaruga sábia tem a resposta de todas as perguntas do universo, pergunte a ela receberá uma resposta</p>
+        <p> A tartaruga sábia tem a resposta de todas as perguntas do universo, pergunte a ela e receberá uma resposta.</p>
     </div>
 
 
