--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,9 +37,9 @@
         <a href="/quiz">
             <button class="button1">Quiz</button>
 
-        </a>
+        </a > 
 
-        <a>
+        <a href="/cartinha"> 
             <button class="button1">Cartinha</button>
 
         </a>
