--- a/views/cartinha.handlebars
+++ b/views/cartinha.handlebars
@@ -1,28 +1,53 @@
-  <br> <br>
-  
+<br> <br>
+
 <H1 class="center-text">CARTINHA</H1>
 <br>
-<p><b>FELIZ ANIVERSÁRIO BIA</b>, eu to fazendo essa cartinha pra expressar o meu carinho que eu tenho por você e pela nossa amizade. Apesar da distância isso nunca 
-    abalou a consideração que tenho e todos os momentos que a gente ja viveu junto. Espero que eu possa passar mais anos como esse sendo sua amiga e compartilhando
-    momentos com você, e se precisar fazer mais 30 projetos de homenagem nos proximos 30 aniversários eu faço kkkkk. Enfim continue sendo essa pessoa íncrivel(e peculiar kkkk) 
+<p><b>FELIZ ANIVERSÁRIO BIA</b>, eu to fazendo essa cartinha pra expressar o meu carinho que eu tenho por você e pela
+    nossa amizade. Apesar da distância isso nunca
+    abalou a consideração que tenho e todos os momentos que a gente ja viveu junto. Espero que eu possa passar mais anos
+    como esse sendo sua amiga e compartilhando
+    momentos com você, e se precisar fazer mais 30 projetos de homenagem nos proximos 30 aniversários eu faço kkkkk.
+    Enfim continue sendo essa pessoa íncrivel(e peculiar kkkk)
     que você é. QUE VENHAM MUITOS MAIS ANOS.
 </p>
 
-<br> 
+<br>
 
 <div class="center-all">
-<img  src="img/stich-abraço.gif" style="width: 300px">
+    <img src="img/stich-abraço.gif" style="width: 300px">
 
 </div>
 <br>
+<br>
 
+<h1 class="center-text">FOTOS</h1>
+<br>
 <p>
     Segue abaixo fotos registradas da <b> MELHOR</b> aníversariante da data de hoje:
 </p>
 
 <div class="center-all">
 
-    <img src="img/FotoBia1.jpg">
-    <img src="img/FotoBia2.jpg">
-    <img src="img/FotoBia3.jpg">
+    <div class="container">
+        <img src="img/FotoBia1.jpg">
+        <img src="img/FotoBia2.jpg">
+
+    </div>
+
+    <div class="container">
+        <img src="img/FotoBia4.jpg">
+        <img src="img/FotoBia7.jpg">
+
+    </div>
+
+
+    <div class="container">
+        <img src="img/FotoBia5.jpg">
+        <img src="img/FotoBia6.jpg">
+    </div>
+
+    <div class="container">
+        <img src="img/FotoBia3.jpg">
+        <img src="img/FotoBia8.png">
+    </div>
 </div>
