--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,44 +1,61 @@
-<div>
+<br>
+<h3 class="center-text">Inicio</h3>
+<br>
+
+<b>
+    <p class="text-center">
+        FELIZ ANIVERSÁRIO BIAAA. Eu fiz esse site como uma breve homenagem
+        a esse dia tão especial. A ideia de fazer esse site veio da vontade de dar algo de presente e pela falta de
+        dinheiro kkkkk.
+        Espero que goste porque eu fiz com muito carinho :)
+    </p>
+</b>
 
 
-    <br> 
-    <h3 class="center-text">Inicio</h3>
-    <br>
+<br>
+<div class="center-all">
 
-    <b><p class="text-center"> 
-        FELIZ ANIVERSÁRIO BIAAA. Eu fiz esse site como uma breve homenagem 
-        a esse dia tão especial. A ideia de fazer esse site veio da vontade de dar algo de presente e pela falta de dinheiro kkkkk. 
-        Espero que goste porque eu fiz com muito carinho :) 
-    </p></b>
-
-
-    <br><br>
-  
-
-
-    <h3 class="center-all">A CUECA</h3>
-    <br><br><br>
-    <div class="container">
-
-        <a href="/cueca">
-        <b>
-            <img src="img/cueca.png">
-        </b></a>
-        <br>
-        <p>CLIQUE NA CUECA PARA GANHAR 1000000000 DE REAIS IMEDIATAMENTE!!!</p>
-    </div>
-
-    <h3 class="center-text">A TARTARUGA</h3>
-    <br>
-     <div class="container">
-
-        <a href="/tartaruga">
-        <b>
-            <img src="img/tartaruga.webp">
-        </b></a>
-        <br>
-        <p> A tartaruga sábia tem a resposta de todas as perguntas do universo, pergunte a ela e receberá uma resposta.</p>
-    </div>
-
-
+    <img src="img/stitch-running.gif" style="width: 350px;">
 </div>
+<br><br><br><br><br><br><br>
+
+
+
+<h3 class="center-all">A CUECA</h3>
+<br><br><br>
+<div class="container">
+
+    <a href="/cueca">
+        <b>
+            <img src="img/cueca.png" style="width: 300px;">
+        </b></a>
+    <br>
+    <p>CLIQUE NA CUECA PARA GANHAR 1000000000 DE REAIS IMEDIATAMENTE!!!</p>
+</div>
+
+<h3 class="center-text">A TARTARUGA</h3>
+<br>
+<div class="container">
+
+    <a href="/tartaruga">
+        <b>
+            <img src="img/tartaruga.webp" style="width: 600px;">
+        </b></a>
+    <br>
+    <p> A tartaruga sábia tem a resposta de todas as perguntas do universo, pergunte a ela e receberá uma resposta.</p>
+</div>
+
+<h3 class="center-text">QUIZ</h3>
+<br>
+
+<div class="center-all">
+
+    <p>Clique no botão para fazer o <b>O MELHOR QUIZ QUE JÁ EXISTIU</b> </p>
+    <br>
+    <a href="/quiz">
+
+        <button class="button2">Quiz</button>
+    </a>
+</div>
+
+<br><br><br>
